--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/dj1677/COMP2156/issues"
   },
-  "homepage": "https://github.com/dj1677/COMP2156#readme"
+  "homepage": "https://github.com/dj1677/COMP2156#readme",
+  "dependencies": {
+    "bootstrap": "^5.3.8",
+    "jquery": "^4.0.0",
+    "popper.js": "^1.16.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-scripts": "^5.0.1"
+  }
 }
